# self_custom

./: .gitignore  MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml  setup.py
self_custom/: __init__.py  hooks.py  modules.txt  patches.txt
self_custom/api/: marup_share.py  marup_subscription.py
self_custom/config/: desktop.py  docs.py
self_custom/doc_events/: customer.py  journal_entry.py  payment_entry.py  sales_partner.py
self_custom/fixtures/: custom_field.json  property_setter.json
self_custom/overrides/: payment_entry.py
self_custom/patches/v13_0/: add_scheme_accounting_dimension.py  setup_journal_entry.py  setup_sales_partner.py
self_custom/public/: build.json
self_custom/public/includes/: point_of_sale.js
self_custom/public/js/: index.js  point_of_sale.js  self_custom.bundle.js  version.js
self_custom/public/js/pos/: index.js  withTitle.js
self_custom/self_custom/doctype/marup_default/: marup_default.json  marup_default.py
self_custom/self_custom/doctype/marup_period/: marup_period.js  marup_period.json  marup_period.py  test_marup_period.py
self_custom/self_custom/doctype/marup_scheme/: marup_scheme.js  marup_scheme.json  marup_scheme.py  test_marup_scheme.py
self_custom/self_custom/doctype/marup_settings/: marup_settings.js  marup_settings.json  marup_settings.py  test_marup_settings.py
self_custom/self_custom/doctype/marup_share/: marup_share.js  marup_share.json  marup_share.py  test_marup_share.py
self_custom/self_custom/doctype/marup_subscription/: marup_subscription.js  marup_subscription.json  (+3 more)
(+4 files in other folders)
