[project]
name = "self_custom"
authors = [
    { name = "Libermatic LLP", email = "info@libermatic.com"}
]
description = "Customizations for SELF"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
black = "==20.8b1"

[tool.black]
line-length = 88

